# Nexus-V2

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  pages.yml
.husky/: pre-commit
docs/: CONTRIBUTING.md  Comparison and Viability Analysis by Gemini  UI-DESIGN-SYSTEM-SPEC.md  architecture.md  conflict-resolution-design.md  database-reference.md  developer-guide.md  epic-0-checklist.md  epic-1-checklist.md  epic-11-checklist.md  epic-12-checklist.md  epic-13-checklist.md  epic-14-caldav-validation.md  epic-14-checklist.md  epic-2-checklist.md  epic-3-checklist.md  epic-4-checklist.md  epic-5-checklist.md  epic-6-checklist.md  epic-7-checklist.md  epic-8-checklist.md  glossary.md  ipc-api-reference.md  known-gaps.md  macos15-crash-investigation.md  module-authoring.md  nexus-relay-deployment.md  panels to build  prior-art.md  relay.md  roadmap.md  security-model.md  substrate-design.md  testing-policy.md  user-guide.md
docs/notes/: README.md  panels-brainstorm.md  tauri for pc
e2e/: README.md  ai-summarize.spec.ts  fixtures.ts  notes.spec.ts  smoke.spec.ts  tasks-from-email.spec.ts  tasks.spec.ts  timekit.spec.ts
ios/: Local.xcconfig  Package.swift  README.md  project.yml
ios/Nexus.xcodeproj/: project.pbxproj
ios/NexusTests/: CryptoManagerTests.swift  MutationEngineTests.swift
landing/: index.html  tailwind.css
landing v0.5/: README.md  index.html  tailwind.config.cjs
landing-immersive/: README.md  app.js  cookies.html  fonts.css  index.html  legal.css  privacy.html  terms.html
relay-server/: Cargo.toml
relay-server/src/: db.rs  main.rs  routes.rs
scripts/: validate-visual.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  popout.rs  smtp.rs
src-tauri/src/calendar/: mod.rs  recurrence.rs
src-tauri/src/commands/: ai.rs  calendar.rs  mod.rs  providers.rs  relay.rs  rules.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/gmail/: backoff.rs  calendar.rs  contacts.rs  label_map.rs  mod.rs  mutations.rs  oauth.rs  sync.rs  types.rs
src-tauri/src/providers/: autodiscovery.rs  gmail.rs  imap.rs  imap_idle.rs  jmap.rs  jmap_types.rs  mod.rs  outlook_oauth.rs
src-tauri/src/providers/calendar/: caldav.rs  google.rs  mod.rs
src-tauri/src/relay/: client.rs  mod.rs  server.rs
src-tauri/src/watcher/: mod.rs
src/components/: Workspace.tsx
src/data/: fixtures.ts  types.ts
src/design-system/: tokens.css  tokens.ts
src/lib/: appPreferences.ts  calendarColors.ts  calendarUtils.ts  calendars.ts  clientMode.ts  compose.ts  contactSearch.ts  defaultCustomFields.ts  email.ts  emailSanitize.ts  export.ts  googleSync.ts  icalUtils.ts  loadBodies.ts  messageGrouping.ts  panelColors.ts  print.ts  rrule.ts  shortcuts.ts  signature.ts  tableColumns.ts  useMediaQuery.ts  useScrollDirection.ts  useSwipeBack.ts  utils.ts  vcard.ts  wheelNav.ts
src/modules/: bootstrap.ts  capabilities.ts  commands.ts  host.ts  registry.ts  storage.ts  surfaceRegistry.ts  surfaces.ts
src/state/: eventBus.ts  linksGraph.ts  moduleReducers.ts  mutationKind.ts  mutations.ts  provenance.ts  workspace.ts
src/storage/: bodyStore.ts  fts.ts  local.ts  query.ts  tauri.ts  useStore.ts  workspaceManager.ts
src/windows/: PopoutComposer.tsx  PopoutHost.tsx  PopoutPanelHost.tsx
(+262 files in other folders)
