[package]
name = "nexus-relay"
version = "0.1.0"
edition = "2021"
description = "Nexus sync relay server — self-hostable, zero-knowledge"

[[bin]]
name = "nexus-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
tower-http = { version = "0.5", features = ["cors"] }
