[package]
name = "nexus"
version = "0.1.0"
description = "Nexus — local-first mail client"
authors = ["Nexus"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
notify = { version = "6", features = ["macos_fsevent"] }
mailparse = "0.15"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native"] }
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
