[package]
name = "nexus"
version = "0.1.0"
description = "Nexus — local-first mail client"
authors = ["Nexus"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nexus"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
notify = { version = "6", features = ["macos_fsevent"] }
mailparse = "0.15"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native"] }
url = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
chacha20poly1305 = "0.10"
blake3 = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
utf7-imap = "0.3"
async-trait = "0.1"
futures = "0.3"
webpki-roots = "0.26"
tokio-rustls = "0.26"

# Patch tao to fix macOS 15 crash in applicationDidFinishLaunching
# (MainThreadMarker::new().unwrap() panics in tao 0.35.2 on macOS 15+)
[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao", branch = "dev" }
